--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MINIO_ENDPOINT=10.10.100.152
+MINIO_ENDPOINT=localhost
 MINIO_PORT=9000
 MINIO_ACCESS_KEY=YZxefW86HVD3sWeImtke
 MINIO_SECRET_KEY=O8LfXvkqiLfMcDK4lh35WkmejVP9BOk3LiS5WXB7
